[gd_scene load_steps=6 format=3 uid="uid://bqq24b1qxt4r7"]

[ext_resource type="Texture2D" uid="uid://bhexr0tytfxlb" path="res://updated_assets/icons_and_buttons/keyboard_top.svg" id="1_a2qy6"]
[ext_resource type="Script" uid="uid://djoq1glbbojw1" path="res://combined_scripts/interaction_prompt.gd" id="1_hyumr"]
[ext_resource type="Texture2D" uid="uid://dmev1jp2fxu07" path="res://updated_assets/icons_and_buttons/mouse_left.svg" id="3_rbyiy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hyumr"]
texture = ExtResource("1_a2qy6")
texture_margin_left = 17.1424
texture_margin_top = 14.2369
texture_margin_right = 15.9802
texture_margin_bottom = 14.5275
region_rect = Rect2(150.201, 172.59, 129.139, 116.59)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbyiy"]
atlas = ExtResource("3_rbyiy")
region = Rect2(302.018, 25.9895, 417.843, 715.691)

[node name="InteractionPrompt" type="HBoxContainer"]
offset_right = 82.0
offset_bottom = 40.0
theme_override_constants/separation = 10
script = ExtResource("1_hyumr")

[node name="KeyboardKey" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hyumr")

[node name="KeyLabel" type="Label" parent="KeyboardKey"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "UNKNOWN BUTTON"
horizontal_alignment = 1

[node name="MouseButton" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(30, 50)
layout_mode = 2
texture = SubResource("AtlasTexture_rbyiy")
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0778605, 0.191658, 0.245945, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
